--- a/config/propel.ini
+++ b/config/propel.ini
@@ -1,16 +1,16 @@
 propel.targetPackage       = lib.model
 propel.packageObjectModel  = true
 propel.project             = sf_sandbox
-propel.database            = sqlite
-propel.database.driver     = sqlite
-propel.database.url        = sqlite:%SF_DATA_DIR%/sandbox.db
+propel.database            = mysql
+propel.database.driver     = mysql
+propel.database.url        = mysql:%SF_DATA_DIR%/sandbox.db
 propel.database.creole.url = ${propel.database.url}
 propel.database.user       = root
 propel.database.password   = 
 
 
 ; mysql options
-propel.mysql.tableType     = InnoDB
+propel.mysql.tableType     = 
 
 propel.addVendorInfo       = true
 propel.addGenericAccessors = true
