- course critique working without graphs and mean/median

--- a/config/propel.ini
+++ b/config/propel.ini
@@ -10,7 +10,7 @@ propel.database.password   =
 
 
 ; mysql options
-propel.mysql.tableType     = 
+propel.mysql.tableType     = InnoDB
 
 propel.addVendorInfo       = true
 propel.addGenericAccessors = true
