- edit settings.yml to enable front controller name in url - latest db structure script

--- a/apps/courses/config/settings.yml
+++ b/apps/courses/config/settings.yml
@@ -1,6 +1,6 @@
 prod:
   .settings:
-    no_script_name:         on
+    no_script_name:         off
     logging_enabled:        off
 
 dev:
@@ -10,6 +10,7 @@ dev:
     cache:                  off
     no_script_name:         off
     etag:                   off
+    logging_enabled:        on
 
 test:
   .settings:
