--- a/apps/courses/config/factories.yml
+++ b/apps/courses/config/factories.yml
@@ -28,8 +28,10 @@ all:
   routing:
     class: sfPatternRouting
     param:
-      generate_shortest_url:            true
-      extra_parameters_as_query_string: true
+      cache:
+        class: sfNoCache
+#      generate_shortest_url:            true
+#      extra_parameters_as_query_string: true
 
 #all:
 #  controller:
