--- a/apps/courses/config/settings.yml
+++ b/apps/courses/config/settings.yml
@@ -1,5 +1,6 @@
 prod:
   .settings:
+    web_debug:              off
     no_script_name:         off
     logging_enabled:        off
 
@@ -31,6 +32,10 @@ all:
 
     # Cache settings
     lazy_cache_key:         on        # Delays creation of a cache key until after checking whether an action or partial is cacheable
+    
+  .actions:
+    error_404_module:       error     # To be called when a 404 error is raised
+    error_404_action:       error404  # Or when the requested URL doesn't match any route
 
 #all:
 #  .actions:
