turned template caching back on to improve performance; instructor searching now incorporates search by last name initials

--- a/config/skuleGlobal.yml
+++ b/config/skuleGlobal.yml
@@ -6,7 +6,7 @@ mail_notification:
   sender_smtp:           smtp.gmail.com
   sender_username:       engscipraxis
   sender_password:       JasonFoster
-  receiver:              {1:wildabyss@gmail.com, 2:jimmy.lu@utoronto.ca}
+  receiver:              {1:wildabyss@gmail.com}
   
 global:
   domain:                localhost
