--- a/apps/scheduler/config/routing.yml
+++ b/apps/scheduler/config/routing.yml
@@ -1,7 +1,7 @@
 # default rules
 homepage:
   url:   /
-  param: { module: default, action: index }
+  param: { module: main, action: index }
 
 default_index:
   url:   /:module
