logging on for dev

--- a/apps/courses/config/settings.yml
+++ b/apps/courses/config/settings.yml
@@ -11,7 +11,7 @@ dev:
     cache:                  off
     no_script_name:         off
     etag:                   off
-    logging_enabled:        off
+    logging_enabled:        on
 
 test:
   .settings:
